Fixed StaffAttendance API